--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -201,6 +201,12 @@
     margin-left: 1000px;
     margin-top: -60px;
   }
+  .clear-icon {
+    cursor: pointer;
+    font-size: 16px;
+    margin-left: 5px;
+  }
+  
   
   @media only screen and (max-width: 800px) {
    
