--- a/src/app/modules/admin/components/order-management/order-management.component.html
+++ b/src/app/modules/admin/components/order-management/order-management.component.html
@@ -66,7 +66,7 @@
             FILLING</button>
         </div>
         <div *ngIf="element.statusCd=='FILLING IN PROGRESS'">
-          <button class="btn btn-outline-primary" (click)="openDialog('finish-filling',element.orderId)">FINSHI
+          <button class="btn btn-outline-primary" (click)="openDialog('finish-filling',element.orderId)">FINISH
             FILLING</button>
         </div>
         <div *ngIf="element.statusCd=='FILLED'">
