--- a/src/app/product-sku-detail/product-sku-detail.component.html
+++ b/src/app/product-sku-detail/product-sku-detail.component.html
@@ -1,18 +1,17 @@
-<div>
-    <button type="button" id="editbtn" class="btn btn-secondary" (click)="edit()">Edit</button>
-    <button type="button" id="addoptbtn" class="btn btn-primary" (click)="AddOptions()">Add NewOption</button>
 
-
-
-</div>
 
 <form class="row  g-3" class="box" [formGroup]="Updateform">
+    <div>
+        <button type="button" id="editbtn" class="btn btn-secondary" (click)="edit()" style="font-family: initial;">Edit</button>
+        <button type="button" id="addoptbtn" class="btn btn-primary" (click)="AddOptions()" style="font-family: initial;">Add NewOption</button>
+    
+    </div>
 
     <div class="img1">
         <div *ngFor="let img of image" class="images">
-            <i class="bi bi-file-excel"></i>
+            <i class="bi bi-file-excel" ></i>
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-file-excel"
-                viewBox="0 0 16 16" (click)="deleteimage(img.productSkuImageId)" class="crossmark">
+                viewBox="0 0 16 16" (click)="deleteimage(img.productSkuImageId)" class="crossmark" >
                 <path
                     d="M5.18 4.616a.5.5 0 0 1 .704.064L8 7.219l2.116-2.54a.5.5 0 1 1 .768.641L8.651 8l2.233 2.68a.5.5 0 0 1-.768.64L8 8.781l-2.116 2.54a.5.5 0 0 1-.768-.641L7.349 8 5.116 5.32a.5.5 0 0 1 .064-.704z" />
                 <path
@@ -30,23 +29,23 @@
 
 
     <div class="row">
-        <div class="col-2">
-            <label class="form-label">productSkuid:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">productSkuid:</label>
             <input type="text" class="form-control" id="productSkuId" name="productSkuId"
                 [(ngModel)]="productSku.productSkuId" formControlName="productSkuId" placeholder="{{id}}"
                 [attr.disabled]="isDisabled ? true : null" readonly>
         </div>
 
-        <div class="col-2">
-            <label class="form-label">Price:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">Price:</label>
             <input type="text" class="form-control" id="price" [(ngModel)]="productSku.price" formControlName="price"
                 placeholder="{{productSku.price}}">
 
         </div>
-        <div class="col-2">
-            <label class="form-label">SkuCode:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">SkuCode:</label>
             <input type="text" class="form-control" id="productSkuCd" name="productSkuCd"
-                [(ngModel)]="productSku.productSkuCd" formControlName="productSkuCd">
+                [(ngModel)]="productSku.productSkuCd" formControlName="productSkuCd" style="font-family: initial;">
 
         </div>
     </div>
@@ -54,22 +53,22 @@
     <div class="row">
 
 
-        <div class="col-2">
-            <label class="form-label">Quantity:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;" >Quantity:</label>
             <input type="text" class="form-control" id="count" formControlName="count" [(ngModel)]="productSku.count">
 
         </div>
-        <div class="col-2">
-            <label class="form-label">Discount in %:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">Discount in %:</label>
 
             <input type="text" class="form-control" id="discount" name="discount" [(ngModel)]="productSku.discount"
-                formControlName="Discount">
+                formControlName="discount">
 
         </div>
-        <div class="col-2">
-            <label class="form-label">Barcode:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">Barcode:</label>
             <input type="text" class="form-control" id="barCode" name="barCode" [(ngModel)]="productSku.barCode"
-                formControlName="barcode">
+                formControlName="barCode">
 
 
         </div>
@@ -78,23 +77,23 @@
 
     <div class="row" id="lastrow">
 
-        <div class="form-group" class="col-2" class="textarea">
-            <label class="form-label">Description:</label>
+        <div class="form-group" class="col-3" class="textarea">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">Description:</label>
             <textarea class="form-control" rows="" id="skuDescription" name="skuDescription"
-                [(ngModel)]="productSku.skuDescription" formControlName="Description"></textarea>
+                [(ngModel)]="productSku.skuDescription" formControlName="skuDescription" style="font-family: initial;"></textarea>
         </div>
 
 
-        <div class="col-2">
-            <label class="form-label">ProductId:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">ProductId:</label>
             <input type="text" class="form-control" id="productId" name="productId" [(ngModel)]="productSku.productId"
                 formControlName="productId" placeholder="{{productSku.productId}}"
                 [attr.disabled]="isDisabled ? true : null" readonly>
         </div>
 
 
-        <div class="col-2">
-            <label class="form-label">SelfLocation Code:</label>
+        <div class="col-3">
+            <label class="form-label" style="font-family: initial;font-weight: bolder;">SelfLocation Code:</label>
             <input type="text" class="form-control" name="selfLocCd" [(ngModel)]="productSku.selfLocCd"
                 formControlName="selfLocCd" placeholder="{{productSku.selfLocCd}}"
                 [attr.disabled]="isDisabled ? true : null">
@@ -105,84 +104,94 @@
     </div>
 
     <div class="row">
-        <div class="col-2">
-            <p class="para">Upload Image:</p>
-            <input type="file" (change)="onFileSelected($event)" id="imag_upload" style="display: '';visibility:'';"
-                class="choosefile">
-        </div>
 
-        <div class="col-2">
-            <label class="labelforoptions">Option Name:</label>
+        <div class="col-3" style="margin-left: 90px;margin-top: 10px;">
+            <label class="labelforoptions" style="font-family: initial;font-weight: bolder;">Option Name:</label>
             <p *ngFor="let opt of OptionsData" class="optionsize">{{opt.optionName}}</p>
         </div>
 
-        <div class="col-2">
-            <label id="labelforoptionsvalues">Option Value:</label>
+        <div class="col-3" style="margin-left: 90px;margin-top: 10px;">
+            <label id="labelforoptionsvalues" style="font-family: initial;font-weight: bolder;">Option Value:</label>
             <p *ngFor="let val of OptionsData" class="optionsize">
                 {{val.optionValue}}
 
 
-                <i class="bi bi-trash"></i>
+                <!-- <i class="bi bi-trash"></i>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
                     viewBox="0 0 16 16" id="trashbin">
                     <path
                         d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z" />
                     <path
                         d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z" />
-                </svg>
+                </svg> -->
             </p>
         </div>
+        <div class="col-3" style="margin-left: 90px;margin-top: 20px;">
+            <div formArrayName="option" id="selectoptions">
+                <label style="font-weight: bolder;font-size: 21px;font-family: initial;font-weight: bolder;">Select Option</label>
+                <div>
+                    <mat-form-field>
+                        <mat-label style="font-family: initial;font-weight: bolder;" >Select Option Name:</mat-label>
+                        <mat-select [(value)]="selectedOptionName" [disabled]="!isEditMode">
+                            <mat-option [value]="null" style="font-family: initial;font-weight: bolder;">Select an option</mat-option>
+                            <mat-option *ngFor="let option of alloptionsData;let i=index" [value]="option.optionName"
+                                (click)="filterOptions(i)">{{ option.optionName }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="filteredOptions.length > 0">
+                    <mat-form-field>
+                        <mat-label style="font-family: initial;font-weight: bolder;" >Select Option Value:</mat-label>
+                        <mat-select [(value)]="selectedOptionValue">
+                            <mat-option>Select an option value</mat-option>
+                            <mat-option *ngFor="let option of optionValues ;let i=index" [value]="option.optionId"
+                                (click)="currentSelectedOptionValue(i)">{{option.optionValue}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <span *ngIf="selectedOptionValue" class="clear-icon" (click)="clearSelection()">clear</span>
+                </div>
+            </div>
 
+        </div>
 
 
     </div>
-    <div>
 
-        <div id="Gst">
-            <h1 style="font-size:bold;">GST Info:</h1>
-            <p class="gstcd">GST Code:{{productSku.gstCode}}</p>
-            <p class="gstcd" id="gstPercentage">Percentage:{{productSku.igst}}%</p>
-            <div id="plusicon">
-                <button (click)="button()" class="btn btn-primary" id="gsteditbtn">Edit</button>
+    <div class="row">
 
-            </div>
-            <p></p>
-        </div>
+
         <div class="form-check form-switch" id="toggle">
-            <p class="select">Select Status:</p>
+            <p class="select" style="font-family: initial;font-weight: bolder;">Select Status:</p>
             <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked=''
                 [(ngModel)]="productSku.status" formControlName="status">
-            <span>{{productSku.status ? 'Available':'Not-Available'}}</span>
+            <span style="font-size: 20px;font-family: initial;">{{productSku.status ? 'Available':'Not-Available'}}</span>
         </div>
 
-        <div formArrayName="option" id="selectoptions">
-            <div>
-                <mat-form-field>
-                    <mat-label>Select Option Name:</mat-label>
-                    <mat-select [(value)]="selectedOptionName">
-                        <mat-option [value]="null">Select an option</mat-option>
-                        <mat-option *ngFor="let option of alloptionsData;let i=index" [value]="option.optionName"
-                            (click)="filterOptions(i)">{{ option.optionName }}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
-            <div *ngIf="filteredOptions.length > 0">
-                <mat-form-field>
-                    <mat-label>Select Option Value:</mat-label>
-                    <mat-select [(value)]="selectedOptionValue">
-                        <mat-option>Select an option value</mat-option>
-                        <mat-option *ngFor="let option of optionValues ;let i=index" [value]="option.optionId" (click)="currentSelectedOptionValue(i)">{{option.optionValue}}</mat-option>
-                    </mat-select>
-                </mat-form-field>
-                <span *ngIf="selectedOptionValue" class="clear-icon" (click)="clearSelection()">clear</span>
-            </div>
+        <div class="col-2" style="margin-left:550px;margin-top:20px;position: absolute;">
+            <p class="para" style="font-family: initial;" >Upload Image:</p>
+            <input type="file" (change)="onFileSelected($event)" id="imag_upload" style="display: '';visibility:'';"
+                class="choosefile" style="font-family: initial;" [disabled]="!isEditMode">
         </div>
+
+        <div id="Gst" >
+            <h1 style="font-weight:bolder;" style="font-family: initial;">GST Info:</h1>
+            <p class="gstcd" style="font-family: initial;">GST Code:{{productSku.gstCode}}</p>
+            <p class="gstcd" id="gstPercentage" style="font-family: initial;">Percentage:{{productSku.igst}}%</p>
+            <div id="plusicon">
+                <button (click)="button()" class="btn btn-primary" id="gsteditbtn" [disabled]="!isEditMode">Edit</button>
+
+            </div>
+
+        </div>
+
+       
+
 
     </div>
     <div class="col-3" class="button">
         <button type="submit" class="btn btn-success"
-            (click)=" onSubmit()">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <button type="submit" class="btn btn-danger" (click)="cancel()">Cancel</button>
+            (click)=" onSubmit()" style="width: 150px;height: 40px;" >Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <button type="submit" class="btn btn-danger" (click)="cancel()"  style="width: 150px;height: 40px;">Cancel</button>
 
     </div>
 </form>
