--- a/src/app/modules/admin/components/qc-done-action/qc-done-action.component.html
+++ b/src/app/modules/admin/components/qc-done-action/qc-done-action.component.html
@@ -48,7 +48,7 @@
             hidden>
 
         <button class="btn btn-primary" (click)="failed($event)" [value]="Qcfailed" (click)="QcFailed()"
-            style="margin-left:20px;width:100px">FAIL</button>
+            style="margin-left:20px;width:100px" [disabled]="firstformdisable">FAIL</button>
         <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
             hidden>
 
