--- a/src/app/modules/admin/components/order-item-details/order-item-details.component.html
+++ b/src/app/modules/admin/components/order-item-details/order-item-details.component.html
@@ -1,4 +1,4 @@
-<h1>Order Details</h1>
+<h1 style="margin-left: 860px;">Order Details</h1>
 <div id="left-arrow">
   <i class="bi bi-arrow-left-circle"></i>
   <svg xmlns="http://www.w3.org/2000/svg" width="35" height="25" fill="currentColor" class="bi bi-arrow-left-circle"
@@ -101,9 +101,9 @@
           <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
           <div class="description">
 
-            <p>Product Name:{{item.productName}}</p>
-            <p><b>Quantity:</b>{{item.quantity}}</p>
-            <p><b>price:</b>{{item.totalPrice}}</p>
+            <p><b>Product Name:</b>&nbsp;&nbsp;{{item.productName}}</p>
+            <p><b>Quantity:</b>&nbsp;&nbsp;{{item.quantity}}</p>
+            <p><b>price:</b>&nbsp;&nbsp;{{item.totalPrice}}</p>
           </div>
         </div>
 
