--- a/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.scss
+++ b/src/app/modules/admin/components/start-shipping-action/start-shipping-action.component.scss
@@ -28,7 +28,7 @@
 }
 #submittedbtns{
       margin-top:250px;
-    margin-left: 470px;
+    margin-left: 530px;
    
    
 }
@@ -108,4 +108,10 @@ b{
     margin-top: 130px;
     margin-left: 20px;
     font-size: 18px;
+  }
+  #crossbtn{
+    margin-left: 1230px;
+    margin-top: -70px;
+    position: absolute;
+     color: red;
   }
