--- a/src/app/modules/admin/components/update-staff/update-staff.component.html
+++ b/src/app/modules/admin/components/update-staff/update-staff.component.html
@@ -2,6 +2,7 @@
     <button type="button" id="editbtn" class="btn btn-secondary" (click)="edit()">Edit</button>
 </div> -->
 <h1>Update Staff Form</h1>
+<button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
 <form class="row  g-3" class="box" [formGroup]="UpdateStaffform">
     <div class="row">
         <div class="col-3">
