--- a/src/app/modules/admin/components/update-staff/update-staff.component.scss
+++ b/src/app/modules/admin/components/update-staff/update-staff.component.scss
@@ -29,7 +29,12 @@
     margin-left: 500px;
     color:darkslategray;
   }
-
+  #crossbtn{
+    margin-left: 1190px;
+    margin-top: -60px;
+    position: absolute;
+     color: red;
+  }
 
   @media only screen and (max-width: 800px) {
    
