--- a/src/app/product-sku/product-sku.component.html
+++ b/src/app/product-sku/product-sku.component.html
@@ -2,8 +2,8 @@
 
 
 
-
-<h1 mat-dialog-title style="margin-left: 430px;">Add New ProductSKu</h1>
+<button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+<h1 mat-dialog-title style="margin-left: 430px;font-weight: bolder;font-family: initial;">Add New ProductSKu</h1>
 <div mat-dialog-content class="dialog-content" id="form">
     <form [formGroup]="AddproductSkuform">
         <div>
