--- a/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
+++ b/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.html
@@ -1,4 +1,6 @@
-<h1 mat-dialog-title>Add New Catalog</h1>
+ 
+ <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+ <h1 mat-dialog-title>Add New Catalog</h1>
 <div mat-dialog-content class="dialog-content">
     <form [formGroup]="addnewcatalogform">
         <div>
