--- a/src/app/modules/admin/components/add-new-option/add-new-option.component.scss
+++ b/src/app/modules/admin/components/add-new-option/add-new-option.component.scss
@@ -21,7 +21,25 @@
 .btns{
     margin-left: 300px;
     margin-top: 100px;
+    font-family: initial;
 }
 #cancelbtn{
     margin-left: 20px;
 }
+#crossbtn{
+    margin-left: 810px;
+    margin-top: -60px;
+    size: 10px;
+    color: red;
+    position: absolute;
+  }
+  h1{
+    margin-left: 320px;
+    margin-top: -50px;
+    font-family: initial;
+    font-weight: bolder;
+   
+  }
+  .col-5{
+    margin-left: 20px;
+  }
