--- a/src/app/modules/admin/components/add-staff/add-staff.component.html
+++ b/src/app/modules/admin/components/add-staff/add-staff.component.html
@@ -1,4 +1,5 @@
 <h1 mat-dialog-title style="margin-left: 430px;">Add New Staff</h1>
+<button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
 <div mat-dialog-content class="dialog-content" id="form">
     <form [formGroup]="addstaffform">
         <div>
