--- a/src/app/modules/admin/components/done-packing-action/done-packing-action.component.scss
+++ b/src/app/modules/admin/components/done-packing-action/done-packing-action.component.scss
@@ -26,7 +26,7 @@
 }
 #submittedbtns{
       margin-top:250px;
-    margin-left: 450px;
+    margin-left: 560px;
    
    
 }
@@ -110,4 +110,9 @@ b{
   }
 
 
-
+  #crossbtn{
+    margin-left: 1230px;
+    margin-top: -70px;
+    position: absolute;
+     color: red;
+  }
