--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
@@ -2,6 +2,7 @@
 
 <form [formGroup]="finishfillingform" id="form">
     <h1>Fill Conformation</h1>
+    <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
     <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
         [(ngModel)]="Orderdetails.orderId" hidden>
     <div id="table">
@@ -55,7 +56,7 @@
             hidden>
         
      
-        <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
+       
     </div>
 </form>
 
@@ -77,7 +78,7 @@
 
             <div class="col-3" id="sbmtbtn">  
                 <button type="submit" (click)="submitSecondForm()" class="btn btn-success" >Submit</button>
-
+                <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
             </div>
         </div>
 
