--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
@@ -50,7 +50,7 @@ h1{
 
 #submittedbtns{
     margin-top:30px;
-   margin-left: 400px;
+   margin-left: 460px;
   
   
 }
@@ -71,7 +71,7 @@ h1{
 width: 800px;
 height: 200px;
 margin-top: 50px;
-margin-left: 250px;
+margin-left: 210px;
 }
 #staffcd{
   margin-top: 120px;
@@ -88,4 +88,10 @@ margin-left: 250px;
   margin-top: 130px;
   margin-left: 20px;
   font-size: 18px;
+}
+#crossbtn{
+  margin-left: 1120px;
+  margin-top: -50px;
+  position: absolute;
+   color: red;
 }
