--- a/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.scss
+++ b/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.scss
@@ -28,7 +28,7 @@
 }
 #submittedbtns{
       margin-top:250px;
-    margin-left: 450px;
+    margin-left: 550px;
    
    
 }
@@ -113,4 +113,10 @@ b{
     margin-top: 130px;
     margin-left: 20px;
     font-size: 18px;
+  }
+  #crossbtn{
+    margin-left: 1230px;
+    margin-top: -70px;
+    position: absolute;
+     color: red;
   }
