--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -1,4 +1,6 @@
-<h1 mat-dialog-title>Add New Product</h1>
+
+<button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+<h1 mat-dialog-title style="margin-left: 400px;font-family: initial;font-weight: bolder;">Add New Product</h1>
 <div mat-dialog-content class="dialog-content">
   <form [formGroup]="productForm">
     <div>
