--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
@@ -5,54 +5,70 @@
 .product-name {
     font-size: large;
     margin-left: 9%;
+    font-family: initial;
 }
 
 .vendor-select {
     margin-left: 5%;
     font-size: large;
+    font-family: initial;
 }
 
 .search-tag-list{
     margin-left: 5%;
     font-size: large;
+    font-family: initial;
     
 }
 
 .product-description {
     font-size: large;
     margin-left: 9%;
+    font-family: initial;
 }
 
 .product-catalog{
 margin-left: 34%;
 margin-top: -100px;
+font-family: initial;
 }
 
 .dialog-content {
     height: 400px;
+    font-family: initial;
     
 }
 
 button {
     font-size: large;
     margin-top: 100px;
+    font-family: initial;
 }
 .ManufacturerId{
     margin-left: 20px;
     font-size: large;
+    font-family: initial;
 }
 #addnewcatalogbtn{
     margin-left: 600px; 
      margin-top: -100px;
+     font-family: initial;
 }
 #selectcatalog{
     margin-left: 5px;
+    font-family: initial;
 }
 #search_tag{
     margin-left: 30px;
+    font-family: initial;
 }
-
-@media screen and (min-width: 500px) and (max-width: 1350px) {
+#crossbtn{
+    margin-left: 900px;
+    margin-top: -50px;
+    color: red;
+  }
+  
+@media screen and (min-width: 360px) and (max-width: 1400px) {
     #addnewcatalogbtn{
         margin-left: 280px; 
         margin-top: -280px;
@@ -62,5 +78,8 @@ button {
         margin-left: 100px;
     }
 
-   
+    #crossbtn{
+        margin-left: 200px;
+        margin-top: -50px;
+      }
   }
