--- a/src/app/modules/admin/components/qc-done-action/qc-done-action.component.html
+++ b/src/app/modules/admin/components/qc-done-action/qc-done-action.component.html
@@ -1,6 +1,7 @@
 <button [print]="['printqcdoneform', config]" id="printbtn">Print</button>
 <form [formGroup]="qualitcheckdoneform" id="form">
     <h1>QC Conformation</h1>
+    <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
     <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId"
         [(ngModel)]="Orderdetails.orderId" hidden>
     <div id="table">
@@ -52,7 +53,7 @@
         <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
             hidden>
 
-        <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
+        
 
     </div>
 
@@ -76,7 +77,7 @@
 
             <div class="col-3" id="sbmtbtn">
                 <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
-
+                <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
             </div>
         </div>
 
