--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="startpackingform" id="form">
     <h1 id="headding">Start Packing</h1>
+    <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
     <div id="printbtns">
 
         <button [print]="['printstartpackingform', config]" id="printbtn1">Print</button>
@@ -58,7 +59,7 @@
             style="margin-left:10px;width: 90px;" [disabled]="firstformdisable">Start</button>
         <input type="text" placeholder="{{startpacking}}" formControlName="statusCd" [(ngModel)]="startpacking"
             hidden>
-        <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
+        
     </div>
 </form>
 
@@ -79,7 +80,7 @@
 
             <div class="col-3" id="sbmtbtn">
                 <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
-
+                <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
             </div>
         </div>
 
