--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
@@ -26,7 +26,7 @@
 }
 #submittedbtns{
       margin-top:250px;
-    margin-left: 470px;
+    margin-left: 530px;
    
    
 }
@@ -101,7 +101,7 @@ b{
     border: ridge 10px;
   width: 800px;
   height: 200px;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-left: 250px;
   }
   #staffcd{
@@ -120,5 +120,10 @@ b{
     margin-left: 20px;
     font-size: 18px;
   }
-  
+  #crossbtn{
+    margin-left: 1230px;
+    margin-top: -68px;
+    position: absolute;
+     color: red;
+  }
   
