--- a/src/app/modules/admin/components/update-product/update-product.component.html
+++ b/src/app/modules/admin/components/update-product/update-product.component.html
@@ -1,4 +1,7 @@
-<h1 mat-dialog-title style="margin-left: 500px;margin-top: 100px;">Update Product</h1>
+
+
+<button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
+<h1 mat-dialog-title style="margin-left: 500px;margin-top: 100px; font-family: initial;font-weight: bolder;">Update Product</h1>
 <div mat-dialog-content class="dialog-content">
   <form [formGroup]="updateproductform" id="form">
     <div class="container">
@@ -66,7 +69,7 @@
     <div formArrayName="catalog" class="product-catalog">
       <mat-form-field>
 
-        <mat-label>Select Catalog</mat-label>
+        <mat-label class="form-label" style="font-weight: bolder;" >Select Catalog</mat-label>
         <mat-select multiple [(value)]="selectedCatalogVals">
           <mat-option *ngFor="let item of AllcatalogData; let i=index;" [value]="item" (click)="onSelectCatalogs(i)">
             {{item.catalogName}}
