--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
@@ -7,6 +7,7 @@
     height: 700px;
     
 }
+
 .card1{
     height: 200px;
     margin-top: 50px;
@@ -27,7 +28,7 @@
 }
 #submittedbtns{
      margin-top:-200px;
-    margin-left: 450px;
+    margin-left: 600px;
    
    
 }
@@ -66,7 +67,7 @@ h1{
     border: ridge 10px;
  width: 800px;
  height: 200px;
- margin-top: -100px;
+ margin-top: -50px;
 margin-left: 300px;
 }
 #staffcd{
@@ -80,6 +81,11 @@ margin-left: 300px;
     margin-left: 300px;
     position: absolute;
 }
+#crossbtn{
+    margin-left: 1310px;
+    margin-top: -50px;
+     color: red;
+  }
 
 @media screen and (min-width:360px) and (max-width:1350px){
     #form{
