--- a/src/app/product-sku/product-sku.component.scss
+++ b/src/app/product-sku/product-sku.component.scss
@@ -90,66 +90,83 @@
 .catalogName {
   font-size: large;
   margin-left: 5%;
+  font-weight: bolder;font-family: initial;
 }
 
-
+#crossbtn{
+  margin-left: 1000px;
+  margin-top: -50px;
+  color: red;
+}
 
 .catalogDesc {
   font-size: medium;
   margin-left: 7%;
+  font-weight: bolder;font-family: initial;
 }
 .dob {
   // font-size: medium;
   margin-left: 5%;
   height: 10px;
   margin-top: -20px;
+  font-weight: bolder;font-family: initial;
 
 }
 #calicon{
   margin-left: 150px;
+  font-weight: bolder;font-family: initial;
 }
 .area {
   font-size: large;
   margin-left: 6%;
+  font-weight: bolder;font-family: initial;
 }
 .city {
   font-size: large;
   margin-left: 6%;
+  font-weight: bolder;font-family: initial;
 }
 .state {
   font-size: large;
   margin-left: 6%;
+  font-weight: bolder;font-family: initial;
 }
 .mobileNo {
   font-size: large;
   margin-left: 7%;
+  font-weight: bolder;font-family: initial;
 }
 
 .dialog-content {
   height: 700px;
   width: 1100px;
+  font-weight: bolder;font-family: initial;
 }
 
 button {
   font-size: large;
   margin-top: 100px;
+  font-weight: bolder;font-family: initial;
 }
 .startdt{
   font-size: large;
   margin-left: 7%; 
   margin-top: -20px;
+  font-weight: bolder;font-family: initial;
   
 }
 
 .enddt{
   font-size: large;
   margin-left: 9%; 
+  font-weight: bolder;font-family: initial;
 
 }
 .pincode{
   font-size: large;
   margin-left: 5%; 
   margin-top: 10px;
+  font-weight: bolder;font-family: initial;
 
 }
 #toggle{
@@ -159,6 +176,7 @@ button {
 .select{
   margin-left: -30px;
   font-size: 18px;
+  font-weight: bolder;font-family: initial;
 }
 
 @media screen and (min-width:360px) and (max-width:1400px){
@@ -170,6 +188,10 @@ button {
   margin-left: 300px;
   }
   
+  #crossbtn{
+    margin-left: 800px;
+    margin-top: -50px;
+  }
   
   #toggle{
     margin-left: 100px;
